loan section addedd